--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "css-minimizer-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.1.0",
-    "node-sass": "^6.0.1",
+    "node-sass": "^8.0.0",
     "postcss": "^8.3.5",
     "postcss-loader": "^6.1.1",
     "postcss-preset-env": "^6.7.0",
@@ -47,6 +47,7 @@
   },
   "browserslist": "defaults",
   "dependencies": {
-    "@babel/polyfill": "^7.12.1"
+    "@babel/polyfill": "^7.12.1",
+    "bootstrap": "^5.2.3"
   }
 }
